--- a/style.css
+++ b/style.css
@@ -50,9 +50,13 @@ body {
     transition: all 0.3s;
 }
 
-.btn:hover {
+.btn:hover:not([disabled]) {
     background: #1d1d1d;
     color: antiquewhite;
+}
+
+.btn:disabled {
+    cursor: no-drop;
 }
 
 #next-btn {
@@ -66,4 +70,12 @@ body {
     border-radius: 4px;
     cursor: pointer;
     display: none;
+}
+
+.correct {
+    background: #0b3661;
+}
+
+.incorrect {
+    background: red;
 }
